--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,12 @@
 
     <!-- Edit meta tags for SEO -->
     <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta name="title" content="My Portfolio">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://developerfolio.js.org/">
     <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
@@ -21,7 +19,6 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://developerfolio.js.org/">
     <meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
